--- a/contact_me.html
+++ b/contact_me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Contac me</title>
+    <title>Contact me</title>
 </head>
 <body>
     <h1>Contact Details</h1>
