--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <table cellspacing="30">
             <tr>
-                <td> <img src="https://github.com/Gabby001code/CV/blob/main/20230113_211426-modified.png" height="200px" width="200px"></td>
+                <td> <img src="20230113_211426-modified.png" height="200px" width="200px"></td>
                 <td><h1>Gabriel Matthew O. Galang</h1>
                     <p><em><strong> Associate PV Designer</strong></em></p>
                     <p><strong> Rbiel Air</strong></p>
