--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
     <head>
         <meta charset="UTF-8">
         <title>Gabriel</title>
+        <style>
+            body 
+            {
+                background-color: #F5EDDC;
+            }
+            hr
+            {
+                background-color: #EB1D36 ;
+                border-style: none;
+                height: 2px;
+            }
+        </style>
     </head>
-    <body>
+    <body >
         <table cellspacing="30">
             <tr>
-                <td> <img src="image/20230113_211426-modified.png" height="200px" width="200px"></td>
+                <td> <img src="C:\Users\gabby\Desktop\HTML-Personal site\image\20230113_211426-modified.png" height="200px" width="200px"></td>
                 <td><h1>Gabriel Matthew O. Galang</h1>
                     <p><em><strong> Associate PV Designer</strong></em></p>
                     <p><strong> Rbiel Air</strong></p>
