--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Gabriel</title>
-        <link rel="stylesheet" href="/css/styles.css">
+        <link href="css/styles.css" rel="stylesheet">
     </head>
     <body >
         <table cellspacing="30">
