--- a/contact_me.html
+++ b/contact_me.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact me</title>
+    <link href="css/style_contacts.css" rel="stylesheet">
 </head>
 <body>
     <h1>Contact Details</h1>
